# hagrid-keyserver

./: .gitignore  .gitlab-ci.yml  CONTRIBUTE.md  Cargo.toml  README.md  Rocket.toml.dist  build.rs  hagrid-routes.conf  make-translated-templates  nginx-site.conf  nginx.conf  package.json  shell.nix  webpack.config.js
.tx/: config
contrib/: hagrid-daily-backup  hagrid.service  hagrid@.service
database/: Cargo.toml
database/src/: fs.rs  lib.rs  memory.rs  openpgp_utils.rs  poly.rs  stateful_tokens.rs  sync.rs  test.rs  types.rs  wkd.rs
examples/: import.rs
hagridctl/: Cargo.toml  Rocket.toml
hagridctl/src/: import.rs  main.rs  regenerate.rs
po/hagrid/: de.po  en.po  fr.po  hagrid.pot  it.po  ja.po  nb.po  pl.po  tr.po  zh_Hans.po
src/: anonymize_utils.rs  counters.rs  delete.rs  dump.rs  gettext_strings.rs  i18n.rs  import.rs  mail.rs  main.rs  rate_limiter.rs  sealed_state.rs  template_helpers.rs  tokens.rs  types.rs
src/database/: fs.rs  memory.rs  mod.rs  poly.rs  test.rs
src/web/: debug_web.rs  hkp.rs  maintenance.rs  manage.rs  mod.rs  upload.rs  vks.rs  vks_api.rs  vks_web.rs
templates/: confirm-email-html.hbs  confirm-email-txt.hbs  delete.html.hbs  index.html.hbs  layout.html.hbs  upload.html.hbs  verify-email-html.hbs  verify-email-txt.hbs
templates-translated/de/about/: about.html.hbs  faq.html.hbs  news.html.hbs  stats.html.hbs  usage.html.hbs
templates-translated/fr/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
templates-translated/it/about/: stats.html.hbs  usage.html.hbs
templates-translated/tr/about/: about.html.hbs  stats.html.hbs  usage.html.hbs
templates-translated/zh_Hans/about/: stats.html.hbs
templates-untranslated/about/: about.html.hbs  faq.html.hbs  news.html.hbs  privacy.html.hbs  stats.html.hbs  usage.html.hbs
web/: delete.html.hbs  index.scss  upload.html.hbs  verify.html.hbs
wkd-domain-checker/: requirements.txt  wkd-domain-checker.py
