[package]
name = "hagrid"
version = "0.1.0"
authors = ["Kai Michaelis <kai@sequoia-pgp.org>"]
build = "build.rs"

[workspace]
members = [
    "database",
]

[dependencies]
hagrid-database = { path = "database" }
failure = "0.1.5"
rocket = "0"
rocket_codegen = "0"
sequoia-openpgp =  { git = "https://gitlab.com/sequoia-pgp/sequoia.git", rev = "8d280b4cf59ab57c2e7fa63614e3672277654749" }
multipart = "0"
log = "0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
structopt = "0.2"
url = "1.6"
lettre_email = "0.8"
handlebars = "1.1.0"
num_cpus = "1.0"
fs_extra = "1.0"

[dependencies.lettre]
version = "0.8"
default-features = false
# smtp-transport doesn't build (openssl problem)
features = ["file-transport", "sendmail-transport"]

[dependencies.rocket_contrib]
version = "0"
default-features = false
features = ["handlebars_templates"]

[build-dependencies]
vergen = "3"

[dev-dependencies]
regex = "1"

[[bin]]
name = "hagrid"
path = "src/main.rs"

[[bin]]
name = "hagrid-import"
path = "src/import.rs"

[[bin]]
name = "hagrid-delete"
path = "src/delete.rs"
