cargo-features = ["default-run"]

[package]
name = "hagrid"
version = "0.1.0"
authors = ["Kai Michaelis <kai@sequoia-pgp.org>"]
build = "build.rs"
default-run = "hagrid"

[workspace]
members = [
    "database",
    "hagridctl",
]

[dependencies]
hagrid-database = { path = "database" }
failure = "0.1.5"
rocket = "0"
rocket_codegen = "0"
sequoia-openpgp =  { version = "0.7", git = "https://gitlab.com/sequoia-pgp/sequoia", default-features = false }
multipart = "0"
log = "0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
structopt = "0.2"
url = "1.6"
lettre_email = { version = "0.9", git = "https://github.com/lettre/lettre" }
handlebars = "1.1.0"
num_cpus = "1.0"
ring = "0.13"
base64 = "0.10"

[dependencies.lettre]
version = "0.9"
default-features = false
# smtp-transport doesn't build (openssl problem)
features = ["file-transport", "sendmail-transport"]
git = "https://github.com/lettre/lettre"

[dependencies.rocket_contrib]
version = "0"
default-features = false
features = ["handlebars_templates", "json"]

[build-dependencies]
vergen = "3"

[dev-dependencies]
regex = "1"

[[bin]]
name = "hagrid"
path = "src/main.rs"

[[bin]]
name = "hagrid-delete"
path = "src/delete.rs"
