[package]
name = "hagrid"
version = "0.1.0"
authors = ["Vincent Breitmoser <look@my.amazin.horse>", "Kai Michaelis <kai@sequoia-pgp.org>"]
build = "build.rs"
default-run = "hagrid"
edition = "2018"

[workspace]
members = [
    "database",
    "hagridctl",
]

[dependencies]
hagrid-database = { path = "database" }
chrono = "0.4.10"
failure = "0.1.5"
rocket = "0"
rocket_codegen = "0"
sequoia-openpgp =  { version = "0.13", default-features = false }
multipart = "0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
structopt = "0.2"
url = "1.6"
lettre_email = { version = "0.9", git = "https://github.com/lettre/lettre" }
handlebars = "1.1.0"
num_cpus = "1.0"
ring = "0.13"
base64 = "0.10"
uuid = "0.7"
rocket_prometheus = "0.2"
lazy_static = "1.3.0"
rocket_i18n = "0.4"
gettext-macros = "0.5"
runtime-fmt = "0.4"
gettext = "0.4"
glob = "0.3"
rfc2047 = "0.1"

[dependencies.lettre]
version = "0.9"
default-features = false
# smtp-transport doesn't build (openssl problem)
features = ["file-transport", "sendmail-transport"]
git = "https://github.com/lettre/lettre"

[dependencies.rocket_contrib]
version = "0"
default-features = false
features = ["handlebars_templates", "json"]

[build-dependencies]
vergen = "3"

[dev-dependencies]
regex = "1"

[[bin]]
name = "hagrid"
path = "src/main.rs"

[[bin]]
name = "hagrid-delete"
path = "src/delete.rs"
