[package]
name = "hagrid-database"
version = "0.1.0"
authors = ["Kai Michaelis <kai@sequoia-pgp.org>"]

[dependencies]
failure = "0.1.5"
sequoia-openpgp =  { git = "https://gitlab.com/sequoia-pgp/sequoia.git", rev = "8d280b4cf59ab57c2e7fa63614e3672277654749" }
multipart = "0"
log = "0"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
parking_lot = "0.6"
url = "1.6"
hex = "0.3"
base64 = "0.10"
pathdiff = "0.1"
idna = "0.1"

[lib]
name = "hagrid_database"
path = "src/lib.rs"
