[package]
name = "hagrid-database"
version = "0.1.0"
authors = ["Kai Michaelis <kai@sequoia-pgp.org>"]

[dependencies]
failure = "0.1.5"
sequoia-openpgp =  { version = "0.6", default-features = false }
multipart = "0"
log = "0"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
parking_lot = "0.7"
url = "1.6"
hex = "0.3"
base64 = "0.10"
pathdiff = "0.1"
idna = "0.1"
fs2 = "0.4"

[lib]
name = "hagrid_database"
path = "src/lib.rs"
